- added configuration for enable/disable highlighting search terms (Thorsten)
- added configuration for enable/disable RSS feeds (Thorsten)
- added permissions for guests (Thorsten)
- added support for multiple LDAP/AD servers (Bernhard Müller, Thorsten)
- added frontend dependency management using Bower (Thorsten)
- added support for PDO_MYSQL (Thorsten)
- updated bundled Symfony ClassLoader to version 2.4.1 (Thorsten)
- updated bundled jQuery to version 1.10.2 (Thorsten)
- updated bundled Bootstrap to version 3.1.1 (Thorsten)
- updated bundled Font Awesome to version 4.0.3 (Thorsten)
- updated bundled Modernizr to version 2.7.2 (Thorsten)
- updated bundled TinyMCE to version 4.0.20 (Thorsten)
- dropped support for ext/mysql (Thorsten)

Version 2.8.9 - 2014-

Version 2.8.8 - 2014-03-18
- improved API security (Thorsten)
- fixed search with Hebrew characters (Thorsten)
- fixed PDF export with Czech and Slovak characters (Thorsten)
- fixed a lot of bugs (Thorsten)

Version 2.8.7 - 2014-02-05
- fixed PHP 5.4 related issue introduced in 2.8.6 (Thorsten)

Version 2.8.6 - 2014-02-04
- fixed IE8/9 only XSS and CSRF vulnerabilities (JPCERT, Thorsten)
- updated Hungarian translation
- updated Spanish translation (Luis Carvalho)
- updated bundled Symfony ClassLoader to version 2.4.1 (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.5 - 2013-12-31
- fixed SSO logins with mod_auth_kerb (Stephane Lapie)
- improved HTTPS handling (Thorsten)
- updated Dutch translation
- updated European Portuguese translation
- fixed some minor bugs (Thorsten)

Version 2.8.4 - 2013-11-26
- fixed possible arbitrary PHP code execution (Thorsten)
- updated Chinese (Traditional) translation
- updated Dutch translation
- fixed some minor bugs (Thorsten)

Version 2.8.3 - 2013-11-18
- fixed missing permission check on Image Manager (Thorsten)
- improved HTML / CSS code (Michael Meister)
- updated Brazilian Portuguese translation
- updated Japanese translation
- updated Spanish translation